--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
           without_prefix_v: true # Remove prefix `v` from tag
 
       - name: Publish MAVEN
-        run: mvn -q  deploy -DskipTests   -Drevision=${{ steps.tag.outputs.tag }}  -P publishMavenCentral
+        run: mvn -q  deploy -DskipTests   -Drevision=${{ steps.tag.outputs.tag }}
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
