--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
         <dependency>
             <groupId>io.github.jiangood</groupId>
             <artifactId>open-admin</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.2-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.flowable</groupId>
